--- a/eventobi.html
+++ b/eventobi.html
@@ -40,6 +40,10 @@
 			<input type="submit" value="Get Event by Place">
 			</form>
 			<br>
+			<form action="/getbyhost" method="GET" >
+			<input type="submit" value="Get Event by Host">
+			</form>
+			<br>
 			<form action="/insert" method="GET" >
 			<input type="submit" value="Post an Event">
 			</form>
