--- a/getTanggal.html
+++ b/getTanggal.html
@@ -14,7 +14,7 @@
             
             <form action="/tanggal/" method="GET" >
             <br>
-            Tanggal Event : <input type="text" name="tanggal">
+            Tanggal Event : <input type="text" name="tanggal" placeholder="yyyy-mm-dd">
             <br><br>
             <input type="submit" value="Submit">
 		</center>
